# projeto-robotica

./: .gitignore  Dockerfile  README.md  compose.yaml  entry.sh  pyproject.toml  requirements.txt  tasks.py
app/: pyproject.toml
app/projeto_robotica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/projeto_robotica/functions/trajectory/: trajectory.py
app/tests/: second_question.py
projeto_robotica/: main.py  tasks.py  temp.py
projeto_robotica/drivers/simulation_driver/: driver.py
projeto_robotica/functions/: one_dim.py  two_dim.py
projeto_robotica/functions/trajectory/: motor.py  trajectory.py
tests/: first_question.py
