[tool.poetry]
name = "projeto_robotica"
version = "0.1.0"
description = "Repositório para guardar os códigos do projeto de robótica (braço mecanico)"
authors = ["IanKarlo <iankarlots@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.7.17"
numpy = "1.21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
first_question = "tasks:test_first_question"
second_question = "tasks:test_second_question"